--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.2.0",
